Fixing layout issues caused by fixing layout issues

--- a/public/stylesheets/footer.scss
+++ b/public/stylesheets/footer.scss
@@ -4,14 +4,12 @@ footer {
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 60px; /* Set the fixed height of the footer here */
-  line-height: 60px; /* Vertically center the text there */
+  height: 60px;
+  line-height: 60px;
   margin-top: 20px;
 
-  display: flex;
-  flex-direction: column;
   color: $primary-text-color;
-  text-align: center;
+  //text-align: center;
   > .container > .row {
     .copyright {
       line-height: 20px;
